Reverted the margin->padding change in [16247] and fixed the ie7-right-aligned-table-header problem specifically for ie7
svn changeset:16292/svn branch:6.5

--- a/WebContent/VAADIN/themes/base/table/table.css
+++ b/WebContent/VAADIN/themes/base/table/table.css
@@ -91,6 +91,10 @@
 .v-table-caption-container {
 	overflow: hidden;
 	white-space: nowrap;
+	margin-left: 6px;
+}
+.v-ie7 .v-table-caption-container-align-right {
+	margin-left: 0px;
 	padding-left: 6px;
 }
 .v-table-caption-container-align-right {
